# TheLastResort-Client

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CNGui/: CMakeLists.txt
